--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,2 +1,2 @@
 <h1>Bloc Chat</h1>
-<div ng-repeat="room in home.chatRooms.all">{{ room.$value }}</div>
+<div ng-repeat="room in home.chatRooms">{{ room.$value }}</div>
