--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,7 @@
         <div class="nav-link" ng-click="home.open()">+ Add Room</div>
     </div>
     <div class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3 message-container">
-        <h4>{{home.activeRoom}}</h4> <!-- {{home.activeRoom}} ? -->
+        <h4>{{home.activeRoom}}</h4>
         <div class="table-responsive">
             <table class="table table-striped">
                 <tbody>
