--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,7 @@
 <div class="body">
     <div class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
-        <h1>Bloc Chat</h1>
+        <img src="assets/spaceship.jpg" alt="Space Ship"></img>
+        <h1>Space Chat</h1>
         <div class="nav-link" ng-repeat="room in home.chatRooms" ng-click="home.getRoom(room)">{{ room.$value }}</div>
         <div class="nav-link" ng-click="home.open()">+ Add Room</div>
     </div>
